helm/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: letsencrypt
    name: alertmanager-ingress
    namespace: prometheus
spec:
    rules:
        - host: alertmanager.infra.meioambiente.mg.gov.br
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: prometheus-alertmanager
                            port:
                                number: 9093
