helm/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: letsencrypt
    name: prometheus-ingress
    namespace: prometheus
spec:
    rules:
        - host: prometheus.infra.meioambiente.mg.gov.br
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: prometheus-server
                            port:
                                number: 80
